# cryptagraph

./: .gitignore  LICENSE  README.md
GIFT/branch-bound/: Makefile  analysis.cpp  cipher.cpp  helpers.cpp  main.cpp  search.cpp
GIFT/branch-bound-faster/: Makefile  analysis.cpp  coroutine.cpp  gift.cpp  main.cpp  search.cpp
GIFT/branch-bound-faster/outputs/: 2017-12-11.r8.txt
GIFT/enumerate/: Makefile  analysis.cpp  array.job  bin_iter_cnt.cpp  bin_iter_elp.cpp  gen.py  gift.cpp  iterate.cpp  tests.cpp
PRESENT/: Makefile  analysis.cpp  mask-search.cpp
PRESENT-MPI/: Makefile  analysis.cpp  helpers.cpp  main.cpp  mask-search.cpp  parse.py  present.cpp  types.hpp
RECTANGLE/: cipher.cpp  helper.cpp  main.cpp
bloom_filter/: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
bloom_filter/src/: lib.rs
mask_generator/: Cargo.toml  targets.txt
mask_generator/src/: analysis.rs  approximation.rs  bin_enumerate.rs  bin_generate.rs  bloom.rs  cipher.rs  filter.rs  find_hulls.rs  find_paths.rs  find_properties.rs  gift.perm  graph.rs  graph_generate.rs  graph_search.rs  invert-permuation.py  main.rs  multi_round.rs  options.rs  pool.rs  present.inv.perm  present.perm  property.rs  single_round.rs  test.txt  utility.rs
mask_generator/src/cipher/: fly.inv.perm  fly.rs  gift.rs  khazad.rs  klein.rs  led.rs  mantis.rs  mibs.rs  midori.rs  mod.rs  present.rs  pride.perm  pride.rs  prince.rs  puffin.perm  puffin.rs  qarma.rs  rectangle.inv.perm  rectangle.rs  skinny.rs  twine.rs
src/: Cargo.toml  targets.txt
src/src/: analysis.rs  bin_enumerate.rs  find_properties.rs  graph.rs  graph_generate.rs  main.rs  multi_round.rs  options.rs  pool.rs  property.rs  sbox.rs  single_round.rs  utility.rs
src/src/cipher/: aes.rs  boron.rs  des.rs  epcbc48.rs  epcbc96.rs  fly.perm  fly.rs  gift128.rs  gift64.rs  halka.rs  iceberg.rs  khazad.perm  khazad.rs  klein.rs  led.rs  mantis.rs  mcrypton.rs  mibs.rs  midori.rs  mod.rs  present.rs  pride.inv.perm  pride.rs  prince.rs  puffin.rs  qarma.rs  rectangle.rs  skinny.rs  skinny128.rs  skinny64.rs  tc05.rs  tests.rs  twine.rs
src/src/cipher/data/: gift.perm.inv  present.perm  pride.inv.perm  rectangle.perm
src/src/search/: find_properties.rs  graph.rs  graph_generate.rs  graph_generate_new.rs  graph_new.rs  mod.rs  patterns.rs  prince_extra.rs  search.rs  search_properties.rs  single_round.rs
utility/: graph_plot.py
