[package]
name = "mask_generator"
version = "0.1.0"
authors = ["psve <psve@dtu.dk>"]

[dependencies]
time = "*"
rand = "*"
structopt = "*"
structopt-derive = "*"
num_cpus = "*"
crossbeam-utils = "*"
min-max-heap = "*"

[[bin]]
name = "generate"
path = "src/bin_generate.rs"

[[bin]]
name = "enumerate"
path = "src/bin_enumerate.rs"
