[package]
name = "mask_generator"
version = "0.1.0"
authors = ["psve <psve@dtu.dk>"]

[dependencies]
time = "*"
rand = "*"
structopt = "*"
structopt-derive = "*"
num_cpus = "*"
crossbeam-utils = "*"
lazy_static = "*"
fnv = "*"
indexmap = "*"
smallvec = "*"

[dev-dependencies]
quickcheck = "0.6"
quickcheck_macros = "0.6"

#![cfg_attr(test, feature(plugin))]
#![cfg_attr(test, plugin(quickcheck_macros))]

[[bin]]
name = "generate"
path = "src/bin_generate.rs"

[[bin]]
name = "enumerate"
path = "src/bin_enumerate.rs"