[package]
name = "cryptagraph"
version = "1.1.0"
authors = ["Philip Vejre <philipvejre@gmail.com>"]

[dependencies]
time = "*"
rand = "*"
structopt = "*"
structopt-derive = "*"
num_cpus = "*"
crossbeam-utils = "*"
lazy_static = "*"
fnv = "*"
indexmap = "*"
smallvec = "*"
itertools = "*"
hamming = "*"