[package]
name = "cryptagraph"
version = "1.1.0"
authors = ["Philip Vejre <philipvejre@gmail.com>", "Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2018"

[profile.release]
incremental=true

[dependencies]
rand = "*"
structopt = "*"
structopt-derive = "*"
num_cpus = "*"
crossbeam-utils = "*"
lazy_static = "*"
fnv = "*"
indexmap = "*"
itertools = "*"

[dev-dependencies]
proptest = "0.9.4"
